feat: Update user and empresa models to use Set instead of List; enhance user retrieval logic with new DTO conversion