@@ -33,9 +33,9 @@ public class UsuarioPrincipal implements UserDetails {
 	public static UsuarioPrincipal build(Usuario usuario) {
 
 		List<GrantedAuthority> authorities = usuario.getRoles().stream()
-				.map(rol -> new SimpleGrantedAuthority(rol
+				.map(rol -> (GrantedAuthority) new SimpleGrantedAuthority(rol
 						.getRolNombre().name()))
-				.collect(Collectors.toList());
+				.toList();
 
 		return UsuarioPrincipal.builder()
 				.numero(usuario.getNumero())
